[gcc] 2016-08-10  Michael Meissner  <meissner@linux.vnet.ibm.com>

PR target/72853
	* config/rs6000/rs6000.c (mem_operand_ds_form): Add check for op
	being an offsettable address.

[gcc/testsuite]
2016-08-10  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/72853
	* gcc.target/powerpc/pr72853.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@239325 138bc75d-0d04-0410-961f-82ee72b054a4